--- a/web/css/users_login.css
+++ b/web/css/users_login.css
@@ -11,9 +11,9 @@
 
 .body {
     background: url("../images/img.png") no-repeat;
-    background-size: 100%;
+    background-size: auto 630px;
     width: 100%;
-    height: 650px;
+    height: 630px;
     margin-top: -100px;
 }
 
@@ -36,7 +36,6 @@
 .top > p {
     text-align: center;
     padding-top: 15px;
-    /*margin: 20px 0;*/
     font-size: 25px;
     color: #f57421;
 }
@@ -45,7 +44,6 @@
     position: relative;
     height: 290px;
     margin: 10px 0;
-    /*background-color: red;*/
     border-bottom: 1px solid #dff0d8;
 }
 
@@ -113,10 +111,9 @@
 
 .footer {
     margin-top: 10px;
+    text-align: center;
 }
 
 .footer > span {
     font-size: 15px;
-    position: relative;
-    left: 45%;
 }
