--- a/web/css/users_login.css
+++ b/web/css/users_login.css
@@ -4,24 +4,24 @@
 }
 
 .header {
-    background: url("../images/bti.jpg") no-repeat;
+    background: url("../images/bti.jpg") no-repeat center;
+    background-size: auto 100px;
     width: 100%;
-    height: 200px;
+    height: 100px;
 }
 
 .body {
-    background: url("../images/img.png") no-repeat;
+    background: url("../images/img.png") repeat-x;
     background-size: auto 630px;
     width: 100%;
     height: 630px;
-    margin-top: -100px;
 }
 
 .panel {
     width: 350px;
     height: 420px;
     position: relative;
-    left: 800px;
+    left: 57%;
     top: 60px;
     background-color: #FFFFFF;
     box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0 3px 7px -3px;
